--- a/english.html
+++ b/english.html
@@ -1177,6 +1177,8 @@ Error message and password prompt
 
 <li>White rice with pine nuts</li>
 
+<li>Windows</li>
+
 <li>Wishing star 01</li>
 
 <li>Wishing star 02</li>
@@ -9118,7 +9120,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Grasyani [[Coen Sisters]]" title="$:/StoryList">
+<div list="Windows [[Here in the Ghetto]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9138,7 +9140,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200503075632187" title="$:/temp/search">
+<div created="20161023184814872" modified="20200503154256263" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9331,7 +9333,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
-<div created="20200226093553507" modified="20200226093727098" tags="[[Here in the Ghetto]] Music" title="A December`s night">
+<div created="20200226093553507" modified="20200503153652912" tags="[[Here in the Ghetto]] Music Windows" title="A December`s night">
 <pre>[img[pictures/layla-kan.jpg]]
 
 
@@ -10552,7 +10554,7 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[דבקה]]&gt;&gt;</pre>
 </div>
-<div created="20200226063122808" modified="20200324170019208" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]]" title="Dalya`s room">
+<div created="20200226063122808" modified="20200503153752438" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]] Windows" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
 
@@ -11084,7 +11086,7 @@ The corona times have brought about a new routine to the tribal campfire, such a
 
 </pre>
 </div>
-<div created="20200426192715369" modified="20200428093007046" tags="[[Here in the Ghetto]] Houses Kitchens Laundry" title="From the kitchen's window">
+<div created="20200426192715369" modified="20200503153817481" tags="[[Here in the Ghetto]] Houses Kitchens Laundry Windows" title="From the kitchen's window">
 <pre>[img[pictures/kitchenswindow.jpg]]
 
 
@@ -11542,7 +11544,7 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
  &lt;&lt;heblink [[חינאווי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200220150514247" modified="20200220151401606" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]]" title="Holiday psalms">
+<div created="20200220150514247" modified="20200503153849983" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]] Windows" title="Holiday psalms">
 <pre>[img[pictures/zemirot-chag.jpg]]
 
 
@@ -12112,7 +12114,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
 
 </pre>
 </div>
-<div created="20200212164125847" modified="20200426140819945" tags="Metafiction [[Here in the Ghetto]] Families" title="Laundry">
+<div created="20200212164125847" modified="20200503153915848" tags="Metafiction [[Here in the Ghetto]] Families Windows" title="Laundry">
 <pre>[img[pictures/kevisa.jpg]]
 
 
@@ -12675,7 +12677,7 @@ Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.im
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200502111014930" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
+<div created="20200213154636920" modified="20200503152947631" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -13607,7 +13609,7 @@ In the back part of the blue innocent looking warehouse on the left side of the 
 
  &lt;&lt;heblink [[רזיאל ורפאל]]&gt;&gt;</pre>
 </div>
-<div created="20200215213829151" modified="20200215214355784" tags="[[Here in the Ghetto]] Films [[True stories]]" title="Rear Window">
+<div created="20200215213829151" modified="20200503154042020" tags="[[Here in the Ghetto]] Films [[True stories]] Windows" title="Rear Window">
 <pre>[img[pictures/rear-window.jpg]]
 
 
@@ -15152,7 +15154,7 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200404120449274" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]]" title="TV">
+<div created="20200212204228178" modified="20200503154516144" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV]]&quot;&gt;&gt;
@@ -15203,7 +15205,7 @@ At Corona I stopped counting my gray hairs, who went wild cause [[Meni|Kehol Han
  &lt;&lt;heblink [[מוזנח זה המטופח החדש]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226064334395" modified="20200226064504279" tags="[[Here in the Ghetto]] Music [[True stories]]" title="Urban Nature">
+<div created="20200226064334395" modified="20200503154126815" tags="[[Here in the Ghetto]] Music [[True stories]] Windows" title="Urban Nature">
 <pre>[img[pictures/zirey-kaitz.jpg]]
 
 
@@ -15454,6 +15456,24 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
 
  &lt;&lt;heblink [[אורז לבן עם צנוברים]]&gt;&gt;</pre>
+</div>
+<div created="20200503152637700" modified="20200503152943133" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="Windows">
+<pre>
+
+[img[pictures/windows.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Windows]]&quot;&gt;&gt;
+
+
+
+
+
+ &lt;&lt;heblink [[חלונות]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20200115161700360" modified="20200322163459650" tags="Houses 9-side-wishing-star" title="Wishing star 01">
 <pre>[img[pictures/hadira.jpg]]
