--- a/index.html
+++ b/index.html
@@ -717,6 +717,8 @@ Error message and password prompt
 
 <li>חלון אחורי</li>
 
+<li>חלונות</li>
+
 <li>חמאת שום ועשבי תיבול</li>
 
 <li>חמוצים סיניים</li>
@@ -9215,10 +9217,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200503075729357" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200503153132293" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200503075732474" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200503153601415" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9227,7 +9229,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[התור לגרציאני]] גרציאני [[האחיות כהן]]" title="$:/StoryList">
+<div list="חלונות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9247,7 +9249,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200503075724767" title="$:/temp/search">
+<div created="20161023184814872" modified="20200503153942765" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12674,7 +12676,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Hormones]]&gt;&gt;
 </pre>
 </div>
-<div created="20200126135042452" modified="20200226063427323" tags="[[כאן בגטו]] [[מטא בדיון]] בתים [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="החדר של דליה">
+<div created="20200126135042452" modified="20200503153939274" tags="[[כאן בגטו]] [[מטא בדיון]] בתים [[סיפורים אמיתיים]] [[בדרך לאן שהוא]] חלונות" title="החדר של דליה">
 <pre>[img[pictures/dalya.jpg]]
 
 !!![[תומר]]:
@@ -13359,7 +13361,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Genevieve]]&gt;&gt;</pre>
 </div>
-<div created="20180927093957805" modified="20200426134201455" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]] משפחות" title="זמירות חג">
+<div created="20180927093957805" modified="20200503153226145" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]] משפחות חלונות" title="זמירות חג">
 <pre>[img[pictures/zemirot-chag.jpg]]
 
 !!![[תומר]]:
@@ -13557,7 +13559,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Dreams that we've dreamt]]&gt;&gt;
 </pre>
 </div>
-<div created="20190309100625286" modified="20200215214303876" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
+<div created="20190309100625286" modified="20200503153257669" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]] חלונות" title="חלון אחורי">
 <pre>[img[pictures/rear-window.jpg]]
 
 !!![[תומר]]:
@@ -13567,6 +13569,33 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;englink [[Rear Window ]]&gt;&gt;</pre>
+</div>
+<div created="20200503152507603" modified="20200503171022661" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים" title="חלונות">
+<pre>[img[pictures/windows.jpg]]
+
+!!![[תומר]]:
+
+
+אני לא מנקה חלונות, זה חוק אצלי. מבחינתי מהחלונות החוצה זו כבר הגינה.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[חלונות]]&quot;&gt;&gt;
+
+
+
+
+
+
+&lt;&lt;englink [[Windows]]&gt;&gt;
+
+
+
+
+
+
+</pre>
 </div>
 <div created="20170422160814236" modified="20200502115628107" tags="[[המטבח על פי ז'נבייב]] מתכונים לחם" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
@@ -13702,7 +13731,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tarte tatin]]&gt;&gt;</pre>
 </div>
-<div created="20190404183713312" modified="20200226064644394" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]]" title="טבע עירוני">
+<div created="20190404183713312" modified="20200503153318241" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]] חלונות" title="טבע עירוני">
 <pre>[img[pictures/zirey-kaitz.jpg]]
 
 !!![[תומר]]:
@@ -13840,7 +13869,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tal Bagels]]&gt;&gt;</pre>
 </div>
-<div created="20190310123955900" modified="20200217120047426" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
+<div created="20190310123955900" modified="20200503153406491" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים חלונות" title="טלוויזיה">
 <pre>[img[pictures/television.jpg]]
 
 !!![[תומר]]:
@@ -14091,7 +14120,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Pride here]]&gt;&gt;
 </pre>
 </div>
-<div created="20181001132342409" modified="20200212165900775" tags="[[כאן בגטו]] [[מטא בדיון]]" title="כביסה">
+<div created="20181001132342409" modified="20200503153433632" tags="[[כאן בגטו]] [[מטא בדיון]] חלונות" title="כביסה">
 <pre>[img[pictures/kevisa.jpg]]
 
 !!![[תומר]]:
@@ -15471,7 +15500,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Passover Seder at Dad's and Tirza's]]&gt;&gt;</pre>
 </div>
-<div created="20181216161518706" modified="20200226093832177" tags="[[כאן בגטו]] מוזיקה" title="לילה בדצמבר">
+<div created="20181216161518706" modified="20200503153459540" tags="[[כאן בגטו]] מוזיקה חלונות" title="לילה בדצמבר">
 <pre>[img[pictures/layla-kan.jpg]]
 
 !!![[תומר]]:
@@ -16050,7 +16079,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
-<div created="20200426192521849" modified="20200426193153132" tags="[[כאן בגטו]] בתים מטבחים [[הלכות קורונה]] כביסה" title="מהחלון של המטבח">
+<div created="20200426192521849" modified="20200503153518140" tags="[[כאן בגטו]] בתים מטבחים [[הלכות קורונה]] כביסה חלונות" title="מהחלון של המטבח">
 <pre>[img[pictures/kitchenswindow.jpg]]
 
 
@@ -16201,7 +16230,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200502120123673" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
+<div created="20190617131650064" modified="20200503153057197" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
