--- a/english.html
+++ b/english.html
@@ -513,6 +513,8 @@ Error message and password prompt
 
 <li>From the kitchen's window</li>
 
+<li>From the retreat's window</li>
+
 <li>Gabriel Fauré</li>
 
 <li>Galsi</li>
@@ -9120,7 +9122,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Windows [[Here in the Ghetto]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[From the retreat's window]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9140,7 +9142,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200503154256263" title="$:/temp/search">
+<div created="20161023184814872" modified="20200503190254452" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11101,6 +11103,17 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
 
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
 </div>
+<div created="20200503185958350" modified="20200503190251747" tags="Windows [[Here in the Ghetto]] [[Corona beings]] Houses" title="From the retreat's window">
+<pre>
+[img[pictures/retreatswindow.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[מהחלון של הרטריט]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215222131458" modified="20200215222759573" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]]" title="Gabriel Fauré">
 <pre>[img[pictures/gabriel-faure.jpg]]
 
@@ -12677,7 +12690,7 @@ Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.im
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200503152947631" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
+<div created="20200213154636920" modified="20200503190119965" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -15459,7 +15472,6 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </div>
 <div created="20200503152637700" modified="20200503152943133" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="Windows">
 <pre>
-
 [img[pictures/windows.jpg]]
 
 
