--- a/index.html
+++ b/index.html
@@ -993,6 +993,8 @@ Error message and password prompt
 
 <li>מהחלון של המטבח</li>
 
+<li>מהחלון של הרטריט</li>
+
 <li>מהמטבח של אייל שני</li>
 
 <li>מוזיקה</li>
@@ -9229,7 +9231,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="חלונות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהחלון של הרטריט]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16106,6 +16108,23 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20200503185808988" modified="20200503190435495" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים" title="מהחלון של הרטריט">
+<pre>
+[img[pictures/retreatswindow.jpg]]
+
+
+!!![[תומר]]:
+
+בירכתי הבית שוכן הרטריט, או בשמו הנוסף - השירותים הצפופים.
+
+
+
+
+&lt;&lt;englink [[From the retreat's window]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200406152807676" modified="20200408103641432" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
 <pre>[img[pictures/eyal-shani.jpg]]
 
@@ -16230,7 +16249,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200503153057197" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
+<div created="20190617131650064" modified="20200503190325952" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
