--- a/english.html
+++ b/english.html
@@ -9122,7 +9122,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[From the retreat's window]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Families [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9142,7 +9142,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200503190254452" title="$:/temp/search">
+<div created="20161023184814872" modified="20200505100334496" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10957,7 +10957,7 @@ There aren't enough words or space to describe the wonder of him and of the whol
  &lt;&lt;heblink [[פה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200426132558252" modified="20200426132902360" tags="Children Mothers Meals Houses" title="Families">
+<div created="20200426132558252" modified="20200505100354366" tags="Children Mothers Meals Houses [[The team]]" title="Families">
 <pre>[img[pictures/families.jpg]]
 
 
@@ -11104,8 +11104,7 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
 </div>
 <div created="20200503185958350" modified="20200503190251747" tags="Windows [[Here in the Ghetto]] [[Corona beings]] Houses" title="From the retreat's window">
-<pre>
-[img[pictures/retreatswindow.jpg]]
+<pre>[img[pictures/retreatswindow.jpg]]
 
 
 
@@ -15471,8 +15470,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
  &lt;&lt;heblink [[אורז לבן עם צנוברים]]&gt;&gt;</pre>
 </div>
 <div created="20200503152637700" modified="20200503152943133" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="Windows">
-<pre>
-[img[pictures/windows.jpg]]
+<pre>[img[pictures/windows.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Windows]]&quot;&gt;&gt;
