malo and stories from the future

--- a/english.html
+++ b/english.html
@@ -753,6 +753,8 @@ Error message and password prompt
 
 <li>Majadra</li>
 
+<li>Malo</li>
+
 <li>Mangold and tofu pastry</li>
 
 <li>Manta Ray</li>
@@ -998,6 +1000,8 @@ Error message and password prompt
 <li>Stalin's basement</li>
 
 <li>Steve Buscemi</li>
+
+<li>Stories from the future</li>
 
 <li>Stories I`ve told Norma</li>
 
@@ -9122,7 +9126,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Families [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Stories from the future]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9142,7 +9146,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200505100334496" title="$:/temp/search">
+<div created="20161023184814872" modified="20200510134950730" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9489,7 +9493,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200219184254185" modified="20200324183934841" tags="[[Iry claims]] [[Hunky Dory]]" title="Alexander Technique">
+<div created="20200219184254185" modified="20200510134832359" tags="[[Iry claims]] [[Hunky Dory]] [[Stories from the future]]" title="Alexander Technique">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 
@@ -10649,7 +10653,7 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 
 </pre>
 </div>
-<div created="20200215220237328" modified="20200324170045402" tags="[[Outer sisters]] Music Films [[Iry claims]] [[Hunky Dory]]" title="David Bowie">
+<div created="20200215220237328" modified="20200510134801229" tags="[[Outer sisters]] Music Films [[Iry claims]] [[Hunky Dory]] [[Stories from the future]]" title="David Bowie">
 <pre>[img[pictures/david-bowie.jpg]]
 
 
@@ -10927,7 +10931,7 @@ I want to think that David Bowie returned to his star peacefully, and by that ac
 
 </pre>
 </div>
-<div created="20200225173541221" modified="20200323153554184" tags="[[Outer sisters]] [[Iry claims]]" title="F.M.Alexander">
+<div created="20200225173541221" modified="20200510134819279" tags="[[Outer sisters]] [[Iry claims]] [[Stories from the future]]" title="F.M.Alexander">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
 
@@ -11113,7 +11117,7 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
  &lt;&lt;heblink [[מהחלון של הרטריט]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215222131458" modified="20200215222759573" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]]" title="Gabriel Fauré">
+<div created="20200215222131458" modified="20200510134947458" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]] [[Stories from the future]]" title="Gabriel Fauré">
 <pre>[img[pictures/gabriel-faure.jpg]]
 
 !!![[Gura]]:
@@ -11914,7 +11918,7 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
-<div created="20200215152111069" modified="20200219131907075" tags="[[Here in the Ghetto]] Mothers Metafiction TV" title="Jazz's mom">
+<div created="20200215152111069" modified="20200506110850907" tags="[[Here in the Ghetto]] Mothers Metafiction TV Windows" title="Jazz's mom">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 
@@ -12203,7 +12207,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
 
 </pre>
 </div>
-<div created="20200220173518816" modified="20200220174159196" tags="Films [[Monkeys with car keys]]" title="Lemons">
+<div created="20200220173518816" modified="20200510134930135" tags="Films [[Monkeys with car keys]] [[Stories from the future]]" title="Lemons">
 <pre>[img[pictures/lemons.jpg]]
 
 
@@ -12557,6 +12561,20 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
  &lt;&lt;heblink [[מג'דרה]]&gt;&gt;</pre>
 </div>
+<div created="20200506121422183" modified="20200510134601295" tags="Metafiction Houses [[Stories from the future]]" title="Malo">
+<pre>[img[pictures/malo.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Malo]]&quot;&gt;&gt;
+
+
+
+
+
+ &lt;&lt;heblink [[מאלו]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200306145442838" modified="20200306145624328" tags="[[Vegan recipes]] Recipes [[what does a thing assemble]] [[Food addicts]]" title="Mangold and tofu pastry">
 <pre>[img[pictures/mangold-tofu.jpg]]
 
@@ -12689,7 +12707,7 @@ Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.im
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200503190119965" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
+<div created="20200213154636920" modified="20200510134102932" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -14164,6 +14182,22 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
  &lt;&lt;heblink [[סטיב בושמי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200510133801475" modified="20200510134701636" tags="[[Iry and Gura]] [[The global village]] [[Monkeys with car keys]]" title="Stories from the future">
+<pre>
+
+[img[pictures/stories-from-the-future.jpg]]
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Stories from the future]]&quot;&gt;&gt;
+
+
+
+
+
+ &lt;&lt;heblink [[סיפורים מהעתיד]]&gt;&gt;</pre>
+</div>
 <div created="20200216190653393" modified="20200428100049724" tags="[[True stories]] Houses" title="Stories I`ve told Norma">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
 
@@ -15269,7 +15303,7 @@ The farm's animals are delighted with surprise.
 
 &lt;&lt;heblink [[לזניה צמחונית]]&gt;&gt;</pre>
 </div>
-<div created="20200213171604745" modified="20200324172532621" tags="[[Outer sisters]] [[Hunky Dory]]" title="Vincent Van Gogh">
+<div created="20200213171604745" modified="20200510134746427" tags="[[Outer sisters]] [[Hunky Dory]] [[Stories from the future]]" title="Vincent Van Gogh">
 <pre>[img[pictures/van-goch.jpg]]
 
 
