--- a/index.html
+++ b/index.html
@@ -975,6 +975,8 @@ Error message and password prompt
 
 <li>מאכילים את המצפון</li>
 
+<li>מאלו</li>
+
 <li>מאנטה ריי</li>
 
 <li>מאפה טופו ומנגולד</li>
@@ -1126,6 +1128,8 @@ Error message and password prompt
 <li>סטלין</li>
 
 <li>סיפורים אמיתיים</li>
+
+<li>סיפורים מהעתיד</li>
 
 <li>סיפורים שסיפרתי לנורמה</li>
 
@@ -9231,7 +9235,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="משפחות הסינים פה קואנג [[מהחלון של הרטריט]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סיפורים מהעתיד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9251,7 +9255,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200505093621573" title="$:/temp/search">
+<div created="20161023184814872" modified="20200510135022641" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10324,7 +10328,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20181107123350423" modified="20200217150919248" tags="[[כאן בגטו]] [[מטא בדיון]] אימהות" title="אימא של ג'אז">
+<div created="20181107123350423" modified="20200506110809169" tags="[[כאן בגטו]] [[מטא בדיון]] אימהות חלונות" title="אימא של ג'אז">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 !!![[תומר]]:
@@ -11198,7 +11202,7 @@ Is where I want to be
 &lt;&lt;englink [[James Gandolfini]]&gt;&gt;
 </pre>
 </div>
-<div created="20181003131016162" modified="20200223190813418" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
+<div created="20181003131016162" modified="20200507151106664" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 !!![[אווה]]:
@@ -11212,7 +11216,7 @@ Is where I want to be
 //אני שמחה שאני נראית טוב לגילי, אבל גם עברתי ניתוחים פלסטיים, אני לא אשקר באשר לכך. מצד אחד אני שונאת את העובדה שהייתי צריכה לשנות את עצמי פיזית כדי להרגיש שאני בסדר, הלואי ולא הייתי כזו. אני אוהבת פנים מבוגרים, אוהבת את הפנים של ונסה רדגרייב, הלואי והייתי אמיצה יותר, אך אני מי שאני.//
 
 
-[[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.
+[[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין הפנומנלית והאהובה.
 
 
 &lt;&lt;englink [[Jane Fonda]]&gt;&gt;</pre>
@@ -11257,7 +11261,7 @@ Is where I want to be
 
 &lt;&lt;englink [[A Privileged Man ]]&gt;&gt;</pre>
 </div>
-<div created="20170602180000251" modified="20200215222851378" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="גבריאל פורה">
+<div created="20170602180000251" modified="20200510134329733" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים מהעתיד]]" title="גבריאל פורה">
 <pre>[img[pictures/gabriel-faure.jpg]]
 
 !!![[גורה]]:
@@ -12125,7 +12129,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20200324163333275" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים סגירים [[האנקי דורי]]" title="דיוויד בואי">
+<div created="20170105154405192" modified="20200510134311576" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים סגירים [[האנקי דורי]] [[סיפורים מהעתיד]]" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -13304,7 +13308,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wyclef Jean]]&gt;&gt;</pre>
 </div>
-<div created="20170606183630416" modified="20200320093647861" tags="[[אחיות חוץ]] סגירים" title="וינסנט ואן-גוך">
+<div created="20170606183630416" modified="20200510134442982" tags="[[אחיות חוץ]] סגירים [[סיפורים מהעתיד]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
 
 !!![[גורה]]:
@@ -15740,7 +15744,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Lily 17]]&gt;&gt;
 </pre>
 </div>
-<div created="20191023054233757" modified="20200320094849958" tags="[[קופים ממונעים]] סרטים סגירים" title="לימונים">
+<div created="20191023054233757" modified="20200510134500025" tags="[[קופים ממונעים]] סרטים סגירים [[סיפורים מהעתיד]]" title="לימונים">
 <pre>[img[pictures/lemons.jpg]]
 
 !!![[גורה]]:
@@ -15893,6 +15897,24 @@ We rise to play a greater part.
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.
 
 &lt;&lt;englink [[They feed the conscience]]&gt;&gt;</pre>
+</div>
+<div created="20200506121255099" modified="20200510134249544" tags="[[מטא בדיון]] בתים [[סיפורים מהעתיד]]" title="מאלו">
+<pre>[img[pictures/malo.jpg]]
+
+
+הגעתי למאלו בעקבות סיפור שסבת סבתי סיפרה לי על סב סבתה.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[מאלו]]&quot;&gt;&gt;
+
+
+
+
+&lt;&lt;englink [[Malo]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20181018172540054" modified="20200324164000889" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] אימהות [[האנקי דורי]]" title="מאנטה ריי">
 <pre>[img[pictures/mantaray.jpg]]
@@ -16248,7 +16270,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200503190325952" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
+<div created="20190617131650064" modified="20200510134156427" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -17188,6 +17210,23 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20200510133510366" modified="20200510134644644" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[קופים ממונעים]]" title="סיפורים מהעתיד">
+<pre>
+[img[pictures/stories-from-the-future.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[סיפורים מהעתיד]]&quot;&gt;&gt;
+
+
+
+
+&lt;&lt;englink [[Stories from the future]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20170507202822300" modified="20200426135056726" tags="[[סיפורים אמיתיים]] בתים משפחות" title="סיפורים שסיפרתי לנורמה">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
 
@@ -18098,7 +18137,7 @@ May the lord bless your soul, I love you girl
 
 &lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
 </div>
-<div created="20170603193440578" modified="20200320100551279" tags="[[אחיות חוץ]] [[אירי טוענת]] סגירים" title="פ.מ.אלכסנדר">
+<div created="20170603193440578" modified="20200510134420251" tags="[[אחיות חוץ]] [[אירי טוענת]] סגירים [[סיפורים מהעתיד]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
 !!![[אירי]]:
@@ -19976,7 +20015,7 @@ Fapina''
 &lt;&lt;englink [[Siach Cafe]]&gt;&gt;
 </pre>
 </div>
-<div created="20161206222443036" modified="20200315170746908" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20200510134908390" tags="[[אירי טוענת]] [[סיפורים מהעתיד]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
