--- a/index.html
+++ b/index.html
@@ -9235,7 +9235,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סיפורים מהעתיד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="מאלו [[סיפורים מהעתיד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9255,7 +9255,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200510135022641" title="$:/temp/search">
+<div created="20161023184814872" modified="20200510140703637" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -17210,11 +17210,13 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200510133510366" modified="20200510134644644" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[קופים ממונעים]]" title="סיפורים מהעתיד">
+<div created="20200510133510366" modified="20200510144742313" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[קופים ממונעים]]" title="סיפורים מהעתיד">
 <pre>
 [img[pictures/stories-from-the-future.jpg]]
 
+מינדה:
 
+השנה היא 2026, ואני כאן כבר 6 שנים.
 
 &lt;&lt;list-links filter:&quot;[tag[סיפורים מהעתיד]]&quot;&gt;&gt;
 
