--- a/index.html
+++ b/index.html
@@ -1025,6 +1025,8 @@ Error message and password prompt
 
 <li>מימי של אלפרד</li>
 
+<li>מינדה</li>
+
 <li>מיצפרש</li>
 
 <li>מישל גונדרי</li>
@@ -9223,10 +9225,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200503153132293" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200511172215330" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200503153601415" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200511175842845" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9235,7 +9237,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מאלו [[סיפורים מהעתיד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סיפורים מהעתיד]] מינדה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16270,7 +16272,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200510134156427" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
+<div created="20190617131650064" modified="20200511174609811" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -16348,6 +16350,18 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Mimi of Alfred]]&gt;&gt;</pre>
+</div>
+<div created="20200511171922041" modified="20200511175819446" tags="אימהות משפחות חבר" title="מינדה">
+<pre>[img[pictures/minda.jpg]]
+
+!!![[פיליפ]]:
+
+מינדה היא אימה של בליי, אשתו הטרייה של [[מקס|אני הפסיכיאטר]] בני הבכור. לבעלה קוראים ראודור וחוץ ממינדה יש להם גם את אלו. היא הרבליסטית ועוד דברים מעניינים ויפים.
+
+
+
+
+&lt;&lt;englink [[Minda]]&gt;&gt;</pre>
 </div>
 <div created="20170502201030702" modified="20200322165747939" tags="HH" title="מיצפרש">
 <pre>[img[pictures/mizperesh.jpg]]
@@ -17210,13 +17224,12 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200510133510366" modified="20200510144742313" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[קופים ממונעים]]" title="סיפורים מהעתיד">
-<pre>
-[img[pictures/stories-from-the-future.jpg]]
+<div created="20200510133510366" modified="20200511175958052" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[קופים ממונעים]]" title="סיפורים מהעתיד">
+<pre>[img[pictures/stories-from-the-future.jpg]]
 
-מינדה:
+!!![[מינדה]]:
 
-השנה היא 2026, ואני כאן כבר 6 שנים.
+השנה היא 2026, ואני מתגוררת כאן כבר 6 שנים.
 
 &lt;&lt;list-links filter:&quot;[tag[סיפורים מהעתיד]]&quot;&gt;&gt;
 
