--- a/english.html
+++ b/english.html
@@ -797,6 +797,8 @@ Error message and password prompt
 
 <li>Mimi of Alfred</li>
 
+<li>Minda</li>
+
 <li>Misenplation</li>
 
 <li>Miznon</li>
@@ -9126,7 +9128,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Stories from the future]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12707,7 +12709,7 @@ Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.im
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200510134102932" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
+<div created="20200213154636920" modified="20200511174520174" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -12847,6 +12849,16 @@ I’ve watched the interesting [[film|https://www.imdb.com/title/tt9358200/]] ab
  &lt;&lt;heblink [[מימי של אלפרד]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200511174345239" modified="20200511174539772" tags="[[A friend]] Mothers Families" title="Minda">
+<pre>
+[img[pictures/minda.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[מינדה]]&gt;&gt;</pre>
 </div>
 <div created="20200217134428443" modified="20200219133440077" tags="Kitchens [[Monkeys with car keys]] Laundry [[The kitchen by Genevieve]]" title="Misenplation">
 <pre>[img[pictures/mizonplazya.jpg]]
@@ -14184,7 +14196,6 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 </div>
 <div created="20200510133801475" modified="20200510134701636" tags="[[Iry and Gura]] [[The global village]] [[Monkeys with car keys]]" title="Stories from the future">
 <pre>
-
 [img[pictures/stories-from-the-future.jpg]]
 
 
